var searchData=
[
  ['bb_755',['bb',['../namespaceservio_1_1bb.html',1,'servio']]],
  ['bench_756',['bench',['../namespaceservio_1_1ftest_1_1bench.html',1,'servio::ftest']]],
  ['bits_757',['bits',['../namespaceservio_1_1drv_1_1bits.html',1,'servio::drv']]],
  ['brd_758',['brd',['../namespaceservio_1_1brd.html',1,'servio']]],
  ['cfg_759',['cfg',['../namespaceservio_1_1cfg.html',1,'servio']]],
  ['cnv_760',['cnv',['../namespaceservio_1_1cnv.html',1,'servio']]],
  ['core_761',['core',['../namespaceservio_1_1core.html',1,'servio']]],
  ['ctl_762',['ctl',['../namespaceservio_1_1ctl.html',1,'servio']]],
  ['drv_763',['drv',['../namespaceservio_1_1drv.html',1,'servio']]],
  ['ftest_764',['ftest',['../namespaceservio_1_1ftest.html',1,'servio']]],
  ['ftester_765',['ftester',['../namespaceservio_1_1ftester.html',1,'servio']]],
  ['fw_766',['fw',['../namespaceservio_1_1fw.html',1,'servio']]],
  ['intg_767',['intg',['../namespaceservio_1_1ftest_1_1intg.html',1,'servio::ftest']]],
  ['klmn_768',['klmn',['../namespaceservio_1_1klmn.html',1,'servio']]],
  ['literals_769',['literals',['../namespaceservio_1_1literals.html',1,'servio']]],
  ['mon_770',['mon',['../namespaceservio_1_1mon.html',1,'servio']]],
  ['mtr_771',['mtr',['../namespaceservio_1_1mtr.html',1,'servio']]],
  ['plt_772',['plt',['../namespaceservio_1_1plt.html',1,'servio']]],
  ['scale_773',['scale',['../structservio_1_1cnv_1_1linear__converter.html#a0150bfaf4610d45d2bf84ae88224970a',1,'servio::cnv::linear_converter::scale()'],['../namespaceservio_1_1cfg.html#a1e64cea163bc7cfbed23383830b2268e',1,'servio::cfg::off_scale::scale()'],['../namespaceservio_1_1scmdio.html#ae5f25ecedaee17ceb968eb911b257358',1,'servio::scmdio::line::scale()'],['../namespaceservio_1_1cnv.html#a7c89f761e78402c1f465f3e9028c7c48',1,'servio::cnv::off_scale::scale()']]],
  ['scbs_774',['scbs',['../structservio_1_1fw_1_1context.html#a8a34001a27ad2d35fec01407df424ffc',1,'servio::fw::context']]],
  ['scmdio_775',['scmdio',['../namespaceservio_1_1scmdio.html',1,'servio']]],
  ['sec_5ftime_776',['sec_time',['../namespaceservio.html#a31c65bbbc228b1eeafc15f79227a2909',1,'servio']]],
  ['seconds_777',['seconds',['../namespaceservio.html#ae4779d6544c35b9251297f70da36f657',1,'servio']]],
  ['send_778',['send',['../structservio_1_1drv_1_1com__iface.html#a795e1e0bb90079bf8796d43634301c1c',1,'servio::drv::com_iface::send()'],['../classservio_1_1drv_1_1cobs__uart.html#a6aafe7c0836e39db5a87a6e53c9e8c74',1,'servio::drv::cobs_uart::send()'],['../namespaceservio_1_1drv.html#a90a412dc5dad533a4ab80b5cfaa5ff2c',1,'servio::drv::send()']]],
  ['send_5f_779',['send_',['../structservio_1_1ftest_1_1testing__system.html#a9514650c7de1fd4326c5cda0a8b20e61',1,'servio::ftest::testing_system']]],
  ['send_5fcb_780',['send_cb',['../structservio_1_1ftest_1_1testing__system.html#a32be723ba7ea665263188e8b3324c4a5',1,'servio::ftest::testing_system']]],
  ['sentry_781',['sentry',['../classservio_1_1sntr_1_1sentry.html#ac25c152598248d6e85b20c94babfd1a4',1,'servio::sntr::sentry::sentry(const char *source_id, central_sentry_iface &amp;central)'],['../classservio_1_1sntr_1_1sentry.html#a9d6e13ededd7dfc744ab15323642df37',1,'servio::sntr::sentry::sentry(const sentry &amp;)=delete'],['../classservio_1_1sntr_1_1sentry.html#a9787b410cd45cbe32aae83d5f24e139b',1,'servio::sntr::sentry::sentry(sentry &amp;&amp;)=delete'],['../classservio_1_1sntr_1_1sentry.html',1,'servio::sntr::sentry']]],
  ['sentry_2ecpp_782',['sentry.cpp',['../sentry_8cpp.html',1,'']]],
  ['sentry_2ehpp_783',['sentry.hpp',['../sentry_8hpp.html',1,'']]],
  ['sentry_5f_784',['sentry_',['../structservio_1_1drv_1_1detailed__adc__channel.html#a9490be83ec1d8ba30bd7648cab5f7a6e',1,'servio::drv::detailed_adc_channel::sentry_()'],['../structservio_1_1drv_1_1adc__channel.html#a3039bc56cfcb389d036fab08e9a91add',1,'servio::drv::adc_channel::sentry_()']]],
  ['sentry_5ffixture_785',['sentry_fixture',['../structservio_1_1sntr_1_1tests_1_1sentry__fixture.html',1,'servio::sntr::tests']]],
  ['sentry_5futest_2ecpp_786',['sentry_utest.cpp',['../sentry__utest_8cpp.html',1,'']]],
  ['serial_2ecpp_787',['serial.cpp',['../serial_8cpp.html',1,'']]],
  ['serial_2ehpp_788',['serial.hpp',['../serial_8hpp.html',1,'']]],
  ['serialize_5ferror_789',['serialize_error',['../structservio_1_1scmdio_1_1serialize__error.html#a639afe6c00326057bccb4773d5b1e12e',1,'servio::scmdio::serialize_error::serialize_error()'],['../structservio_1_1scmdio_1_1serialize__error.html',1,'servio::scmdio::serialize_error']]],
  ['servio_790',['Servio',['../index.html',1,'']]],
  ['servio_791',['servio',['../namespaceservio.html',1,'']]],
  ['servio_5fexception_792',['servio_exception',['../structservio_1_1scmdio_1_1servio__exception.html',1,'servio::scmdio']]],
  ['servio_5fpb_2ecpp_793',['servio_pb.cpp',['../servio__pb_8cpp.html',1,'']]],
  ['servio_5fpb_2ehpp_794',['servio_pb.hpp',['../servio__pb_8hpp.html',1,'']]],
  ['set_795',['set',['../structservio_1_1cfg_1_1dispatcher.html#a256182993eacb532d7cbbb311b0b1acb',1,'servio::cfg::dispatcher']]],
  ['set_796',['SET',['../namespaceservio_1_1sntr.html#a875fcd3a5d9ef6909df43ffc0b84d60ea8c52684db8f49511e9b44471716bf164',1,'servio::sntr']]],
  ['set_5fcallbacks_797',['set_callbacks',['../structservio_1_1core_1_1standard__callbacks.html#a19b7321ffa8f54459af4e0ac712a9667',1,'servio::core::standard_callbacks']]],
  ['set_5fconfig_798',['set_config',['../structservio_1_1ctl_1_1linear__transition__regulator.html#ab8c6b8492b17a9e82a5ee831438708ae',1,'servio::ctl::linear_transition_regulator']]],
  ['set_5fconfig_5ffield_799',['set_config_field',['../namespaceservio_1_1scmdio.html#a523df008d64c60dc0c8b714d88637aaa',1,'servio::scmdio']]],
  ['set_5fcurrent_5fcallback_800',['set_current_callback',['../classservio_1_1drv_1_1curr__iface.html#a686ea6c4c895c1be5d38c9d2a9857cbd',1,'servio::drv::curr_iface::set_current_callback()'],['../structservio_1_1drv_1_1adc__pooler__current.html#ac48511364d95b61f82b1f5ab101407fe',1,'servio::drv::adc_pooler_current::set_current_callback()']]],
  ['set_5fcurrent_5fcfg_801',['set_current_cfg',['../structservio_1_1cnv_1_1converter.html#af7ee3d58b58d9b929537758e313fc731',1,'servio::cnv::converter']]],
  ['set_5fdegraded_802',['set_degraded',['../classservio_1_1sntr_1_1sentry.html#a976f75a13b7759a068057d77458a892a',1,'servio::sntr::sentry']]],
  ['set_5fdegraded_5fset_803',['set_degraded_set',['../classservio_1_1sntr_1_1sentry.html#ace25bed8e6d931268c5fd8d0621dabe6',1,'servio::sntr::sentry']]],
  ['set_5finoperable_804',['set_inoperable',['../classservio_1_1sntr_1_1sentry.html#a437c915013d9d4560e80e431f4689f9b',1,'servio::sntr::sentry']]],
  ['set_5finoperable_5fset_805',['set_inoperable_set',['../classservio_1_1sntr_1_1sentry.html#ac5c76e5ce0300fde1985e20c2e0d4ec3',1,'servio::sntr::sentry']]],
  ['set_5finvert_806',['set_invert',['../classservio_1_1drv_1_1pwm__motor__iface.html#a46999fa99616912230c1e86b1be186c9',1,'servio::drv::pwm_motor_iface::set_invert()'],['../classservio_1_1drv_1_1hbridge.html#aacfb37303df17a349a73b7cec5a001d8',1,'servio::drv::hbridge::set_invert()']]],
  ['set_5flimits_807',['set_limits',['../classservio_1_1ctl_1_1control.html#a38a843981e3f30711a8ecb2e57a2567e',1,'servio::ctl::control']]],
  ['set_5fmaximum_5ftemperature_808',['set_maximum_temperature',['../classservio_1_1mon_1_1monitor.html#a63fdc6b2ca966e77690f7a02019d610b',1,'servio::mon::monitor']]],
  ['set_5fminimum_5fvoltage_809',['set_minimum_voltage',['../classservio_1_1mon_1_1monitor.html#ade119ade17becd3addaf262808fbcdd5',1,'servio::mon::monitor']]],
  ['set_5fmode_810',['set_mode',['../namespaceservio_1_1scmdio.html#aa46b302a7220d504bdf3fc5683c99784',1,'servio::scmdio']]],
  ['set_5fmode_5fcurrent_811',['set_mode_current',['../namespaceservio_1_1scmdio.html#ada2b3d06cbfe7688a58b744c88013ca1',1,'servio::scmdio']]],
  ['set_5fmode_5fdisengaged_812',['set_mode_disengaged',['../namespaceservio_1_1scmdio.html#a4e9426deae421f80fe767a13e789e6d3',1,'servio::scmdio']]],
  ['set_5fmode_5fposition_813',['set_mode_position',['../namespaceservio_1_1scmdio.html#a9da5122fa9736ee8ca5c24ffca8674a9',1,'servio::scmdio']]],
  ['set_5fmode_5fpower_814',['set_mode_power',['../namespaceservio_1_1scmdio.html#a1e9314b89aa7bf4e8befabe2ed69470e',1,'servio::scmdio']]],
  ['set_5fmode_5fvelocity_815',['set_mode_velocity',['../namespaceservio_1_1scmdio.html#aa01b34a2e19a667f616be09279d6d92c',1,'servio::scmdio']]],
  ['set_5fmoving_5fstep_816',['set_moving_step',['../classservio_1_1mtr_1_1metrics.html#a83c4c1efb619f47bb70563fba78634c9',1,'servio::mtr::metrics']]],
  ['set_5fperiod_5fcallback_817',['set_period_callback',['../classservio_1_1drv_1_1hbridge.html#a28b3688cc2a74637b053e8c8b3d05d40',1,'servio::drv::hbridge::set_period_callback()'],['../classservio_1_1drv_1_1period__iface.html#aa52c714062e13edee7108a3b0781d24a',1,'servio::drv::period_iface::set_period_callback()']]],
  ['set_5fpid_818',['set_pid',['../classservio_1_1ctl_1_1control.html#a59bf910eb61a839854546eec53f07781',1,'servio::ctl::control']]],
  ['set_5fpos_5fto_5fvel_5flim_5fscale_819',['set_pos_to_vel_lim_scale',['../classservio_1_1ctl_1_1control.html#a026b36daf4dfc381a6f54e515260cb02',1,'servio::ctl::control']]],
  ['set_5fposition_5fcallback_820',['set_position_callback',['../structservio_1_1drv_1_1adc__pooler__position.html#a6298aa3e47e9e0dfc6a1e12138128589',1,'servio::drv::adc_pooler_position::set_position_callback()'],['../classservio_1_1drv_1_1pos__iface.html#a43ff7dac2b4f1cf3bd1a9ba588ccab2f',1,'servio::drv::pos_iface::set_position_callback()']]],
  ['set_5fposition_5fcfg_821',['set_position_cfg',['../structservio_1_1cnv_1_1converter.html#af1c4c51d1f390a59c93aae386f80e321',1,'servio::cnv::converter']]],
  ['set_5fposition_5frange_822',['set_position_range',['../classservio_1_1mtr_1_1metrics.html#a85079921356db92eb1730d0bfe8dda68',1,'servio::mtr::metrics::set_position_range()'],['../structservio_1_1mtr_1_1posvel__kalman.html#a55f74d8a68d2e371a4838e358e3efbc3',1,'servio::mtr::posvel_kalman::set_position_range()']]],
  ['set_5fpower_823',['set_power',['../classservio_1_1drv_1_1hbridge.html#adee305934427c204358465cb87c2bbb8',1,'servio::drv::hbridge::set_power()'],['../classservio_1_1drv_1_1pwm__motor__iface.html#a0469021861453e240fe392722ae900b7',1,'servio::drv::pwm_motor_iface::set_power()']]],
  ['set_5fstatic_5ffriction_824',['set_static_friction',['../classservio_1_1ctl_1_1control.html#a52eaa3ffd4fedd26bc42c7836eaf0a20',1,'servio::ctl::control']]],
  ['set_5fstep_825',['set_step',['../structservio_1_1mtr_1_1static__detector.html#abff692c878defe6eeb5c64fc2329bcbd',1,'servio::mtr::static_detector']]],
  ['set_5ftemp_5fcfg_826',['set_temp_cfg',['../structservio_1_1cnv_1_1converter.html#a25b239118d5c61d49ed49874aeafc713',1,'servio::cnv::converter']]],
  ['set_5fvcc_5fcfg_827',['set_vcc_cfg',['../structservio_1_1cnv_1_1converter.html#a2681c36d726d82b10f0325fc72e77167',1,'servio::cnv::converter']]],
  ['set_5fvel_5fto_5fcurr_5flim_5fscale_828',['set_vel_to_curr_lim_scale',['../classservio_1_1ctl_1_1control.html#ad94697bfa27c37accf9a298e72ae5f5b',1,'servio::ctl::control']]],
  ['setup_829',['SetUp',['../classservio_1_1ctl_1_1tests_1_1control__fixture.html#a3b27f3f5df007705211c5a1a1add2df1',1,'servio::ctl::tests::control_fixture']]],
  ['setup_830',['setup',['../classservio_1_1drv_1_1leds.html#acb58ce267a2894b14e05f5b18998f86b',1,'servio::drv::leds::setup()'],['../structservio_1_1ftest_1_1utest__base.html#aea40ea8d33d61e4b6a9d1e004a4dd36b',1,'servio::ftest::utest_base::setup()'],['../structservio_1_1scmdio_1_1common__cli.html#a8efad675885c5e667ff8dfa954e62149',1,'servio::scmdio::common_cli::setup()'],['../classservio_1_1drv_1_1hbridge.html#aaa818f0bff60de49f5f40e38223147f5',1,'servio::drv::hbridge::setup()']]],
  ['setup_2ehpp_831',['setup.hpp',['../brd_2prototype2_2setup_8hpp.html',1,'(Global Namespace)'],['../plt_2stm32h5_2setup_8hpp.html',1,'(Global Namespace)'],['../cnv_2setup_8hpp.html',1,'(Global Namespace)']]],
  ['setup_5fadc_832',['setup_adc',['../namespaceservio_1_1plt.html#a61d6b0c2150e342de64df4363ad4e8bc',1,'servio::plt::setup_adc()'],['../namespaceservio_1_1brd.html#a6899a3f9d2b0715afe322fab084b0483',1,'servio::brd::setup_adc()']]],
  ['setup_5fadc_5fchannel_833',['setup_adc_channel',['../namespaceservio_1_1plt.html#a04f200642c04256949e23ea736bbd57e',1,'servio::plt::setup_adc_channel()'],['../namespaceservio_1_1brd.html#abaa745f5afa545289a9ea27cbe08ebbe',1,'servio::brd::setup_adc_channel()']]],
  ['setup_5fadc_5ftimer_834',['setup_adc_timer',['../namespaceservio_1_1plt.html#ab59156a4d6fbd15217a26dc5ebed8b64',1,'servio::plt::setup_adc_timer()'],['../namespaceservio_1_1brd.html#a1adccd58bc423db0db48b2b4ff6bbf6d',1,'servio::brd::setup_adc_timer()']]],
  ['setup_5fbench_5ftests_835',['setup_bench_tests',['../namespaceservio_1_1ftest_1_1bench.html#a56881516fb9336e37cd0c96c84fe9cf3',1,'servio::ftest::bench']]],
  ['setup_5fboard_836',['setup_board',['../namespaceservio_1_1brd.html#acf0eac3166e968f5cefe71de1f5d5ca8',1,'servio::brd']]],
  ['setup_5fclk_837',['setup_clk',['../namespaceservio_1_1brd.html#af375aef2289854552e3c6e5c3c16a5cb',1,'servio::brd::setup_clk()'],['../namespaceservio_1_1plt.html#a97b99f12fdb9bdec7f51c3a2fa1a63b8',1,'servio::plt::setup_clk()']]],
  ['setup_5fclock_5ftimer_838',['setup_clock_timer',['../namespaceservio_1_1plt.html#a71520584fd9671ce414b8b5b8c653926',1,'servio::plt::setup_clock_timer()'],['../namespaceservio_1_1brd.html#addcb00188aacbda8352cbd4ddbe7d3e9',1,'servio::brd::setup_clock_timer()']]],
  ['setup_5fcontext_839',['setup_context',['../namespaceservio_1_1fw.html#a72376fa0b159e4c3fa169ba877df3e56',1,'servio::fw']]],
  ['setup_5fcore_5fdrivers_840',['setup_core_drivers',['../namespaceservio_1_1brd.html#a58f703e939140ddd318ba1e8202e6153',1,'servio::brd']]],
  ['setup_5fctl_5ftest_841',['setup_ctl_test',['../namespaceservio_1_1ftest_1_1intg.html#a95d8c51034fa614eb4c61c6b862cab31',1,'servio::ftest::intg']]],
  ['setup_5fdac_842',['setup_dac',['../namespaceservio_1_1plt.html#ab45be70ff68ca1e5e7f42d1fd2dea60a',1,'servio::plt']]],
  ['setup_5fdebug_5fcomms_843',['setup_debug_comms',['../namespaceservio_1_1brd.html#a3a32ee93be6ec4e7cdc01ac78546f79f',1,'servio::brd']]],
  ['setup_5fdts_844',['setup_dts',['../namespaceservio_1_1plt.html#a60d4cc26aa950bc45225db9bae6dfa05',1,'servio::plt']]],
  ['setup_5fencoder_5ftimer_845',['setup_encoder_timer',['../namespaceservio_1_1plt.html#a07c1896432fd80d18bc9f155ba369966',1,'servio::plt']]],
  ['setup_5fgpio_846',['setup_gpio',['../namespaceservio_1_1brd.html#aabe7ae83af846cbd60a93744ae3237ae',1,'servio::brd::setup_gpio()'],['../namespaceservio_1_1plt.html#a5d1ffe876c5d8201cbbb029bb4e7e988',1,'servio::plt::setup_gpio()']]],
  ['setup_5fhbridge_5ftimers_847',['setup_hbridge_timers',['../namespaceservio_1_1brd.html#a0fe8bce4494ca56db71b5ccfdac9a52a',1,'servio::brd::setup_hbridge_timers()'],['../namespaceservio_1_1plt.html#a917cc285404ba1c9a62080f12567ad7c',1,'servio::plt::setup_hbridge_timers()']]],
  ['setup_5fiface_5ftests_848',['setup_iface_tests',['../namespaceservio_1_1drv_1_1tests.html#a5fbe48bf44c7fb58548eafa4c13af3aa',1,'servio::drv::tests']]],
  ['setup_5fimpl_5ftests_849',['setup_impl_tests',['../namespaceservio_1_1drv_1_1tests.html#a32bd21a70e0ed0409959b659339181b1',1,'servio::drv::tests']]],
  ['setup_5fleds_5fchannel_850',['setup_leds_channel',['../namespaceservio_1_1brd.html#a0bfe1785c7671fbc6d1d8e62b760fd77',1,'servio::brd::setup_leds_channel()'],['../namespaceservio_1_1plt.html#a25cf0c78aaa0a1eed2dda1c91f70fc0a',1,'servio::plt::setup_leds_channel()']]],
  ['setup_5fleds_5ftimer_851',['setup_leds_timer',['../namespaceservio_1_1brd.html#a8d47462a1f7fce38cda0f512305746ba',1,'servio::brd']]],
  ['setup_5fmeas_5ftests_852',['setup_meas_tests',['../namespaceservio_1_1ftest_1_1intg.html#ad8aaf65d4ded13eca44135657041f643',1,'servio::ftest::intg']]],
  ['setup_5fpoweroff_853',['setup_poweroff',['../namespaceservio_1_1ftest.html#a7987cf8b1ec20f510735e5435fd46931',1,'servio::ftest']]],
  ['setup_5ftests_854',['setup_tests',['../namespaceservio_1_1ftest.html#a8b4e151d00902dc6a7975ea4fd1affbf',1,'servio::ftest::setup_tests(em::pmr::memory_resource &amp;mem, em::testing::reactor &amp;reac, uctx &amp;ctx, em::testing::parameters &amp;params, core::drivers &amp;cdrv, core::core &amp;core, em::result &amp;res)'],['../namespaceservio_1_1ftest.html#a1ca8d6d1c306452d7a349b11c9e55897',1,'servio::ftest::setup_tests(em::pmr::memory_resource &amp;mem, t::reactor &amp;reac, uctx &amp;ctx, t::parameters &amp;, core::drivers &amp;cdrv, core::core &amp;cor, em::result &amp;res)']]],
  ['setup_5ftests_2ehpp_855',['setup_tests.hpp',['../setup__tests_8hpp.html',1,'']]],
  ['setup_5fuart_856',['setup_uart',['../namespaceservio_1_1brd.html#ab330172ec900f8e5a967b042c5d0fefb',1,'servio::brd::setup_uart()'],['../namespaceservio_1_1plt.html#a7b7c8043898e10b87fa53fd5bb021d96',1,'servio::plt::setup_uart()']]],
  ['setup_5futest_857',['setup_utest',['../namespaceservio_1_1ftest.html#a82fc5f280fcfb6ac25a1ce0dc2f59d07',1,'servio::ftest']]],
  ['sign_5ftest_858',['sign_test',['../structservio_1_1ftest_1_1intg_1_1sign__test.html',1,'servio::ftest::intg']]],
  ['sim_859',['sim',['../namespaceservio_1_1sim.html',1,'servio']]],
  ['simple_5fmotor_860',['simple_motor',['../structservio_1_1sim_1_1simple__motor.html',1,'servio::sim::simple_motor'],['../structservio_1_1sim_1_1simple__motor.html#a7f652550464f4ff90e6867324453c473',1,'servio::sim::simple_motor::simple_motor()=default'],['../structservio_1_1sim_1_1simple__motor.html#a323447a7051c3741e785e9d0c99a1d65',1,'servio::sim::simple_motor::simple_motor(float pos)']]],
  ['simulate_861',['simulate',['../namespaceservio_1_1klmn.html#af3822093522319dfa0c920ce1cf6a873',1,'servio::klmn']]],
  ['simulate_2ecpp_862',['simulate.cpp',['../simulate_8cpp.html',1,'']]],
  ['simulate_2ehpp_863',['simulate.hpp',['../simulate_8hpp.html',1,'']]],
  ['sin_5fapprox_864',['sin_approx',['../namespaceservio_1_1mon.html#a05b0570c91ff6eb55da2986405b24659',1,'servio::mon']]],
  ['size_865',['size',['../namespaceservio_1_1klmn.html#a6012e20714154f03136eb5812a2abef2',1,'servio::klmn::state_range']]],
  ['sizes_866',['sizes',['../namespaceservio_1_1drv_1_1bits.html#ace9011daf35556b455c3a0ac0ca1dbf6',1,'servio::drv::bits::cobs_rx_container']]],
  ['sntr_867',['sntr',['../namespaceservio_1_1sntr.html',1,'servio']]],
  ['src_868',['src',['../structservio_1_1sntr_1_1test__central__sentry.html#a2cfd3bbd7f0ccf8d76ce765e2257c3a9',1,'servio::sntr::test_central_sentry::src()'],['../namespaceservio_1_1sntr.html#ad7affdf6bdcd1d05412b08366280f0f3',1,'servio::sntr::record::src()']]],
  ['st_869',['st',['../namespaceservio_1_1sntr.html#ab2bae1b01c0a067f1bb5eed8f6b6f38c',1,'servio::sntr::record']]],
  ['st_5frange_870',['st_range',['../structservio_1_1mtr_1_1posvel__kalman.html#a16bbaa07f34c05010375ecc1b35a4a04',1,'servio::mtr::posvel_kalman']]],
  ['standard_5fcallbacks_871',['standard_callbacks',['../structservio_1_1core_1_1standard__callbacks.html',1,'servio::core::standard_callbacks'],['../structservio_1_1core_1_1standard__callbacks.html#a7a03037291aaf4d1be21c9688bfd3786',1,'servio::core::standard_callbacks::standard_callbacks()']]],
  ['start_872',['start',['../classservio_1_1drv_1_1leds.html#af876d35e30904d36099d8a2fc9c897c3',1,'servio::drv::leds::start()'],['../structservio_1_1drv_1_1adc__pooler.html#a6f088b3c4b20f74a15db3ee2ae496500',1,'servio::drv::adc_pooler::start()'],['../classservio_1_1drv_1_1cobs__uart.html#a87725c3bc71d715123cc06293480bcf4',1,'servio::drv::cobs_uart::start()'],['../classservio_1_1drv_1_1hbridge.html#a2611d86cd6ca0b3bb3930ac9221a6b91',1,'servio::drv::hbridge::start()'],['../structservio_1_1drv_1_1com__iface.html#a964c0f9d4b01b5e94574ed71a250a4f0',1,'servio::drv::com_iface::start()'],['../classservio_1_1drv_1_1period__iface.html#a1feee5c8a63cb80c71127dc103499207',1,'servio::drv::period_iface::start()']]],
  ['start_5fcallback_873',['start_callback',['../namespaceservio_1_1brd.html#aac2ab253dd62c8d22e7504bd106c6283',1,'servio::brd']]],
  ['start_5fcb_874',['start_cb',['../structservio_1_1core_1_1drivers.html#a9cd6cc7fd26299a79490b17151efe206',1,'servio::core::drivers']]],
  ['state_875',['state',['../namespaceservio_1_1klmn.html#acbeaec773e12939afebddba25b5d3135',1,'servio::klmn::state()'],['../structservio_1_1mon_1_1blinker.html#a49be452f68e339b5f6b490600efd3b07',1,'servio::mon::blinker::state()'],['../structservio_1_1ctl_1_1linear__transition__regulator.html#aecb19b527ceb961ed007cbbd7ed5aca0',1,'servio::ctl::linear_transition_regulator::state()']]],
  ['state_5fcovariance_876',['state_covariance',['../namespaceservio_1_1klmn.html#ae839380c658b06e259608b78e6f17203',1,'servio::klmn']]],
  ['state_5frange_877',['state_range',['../namespaceservio_1_1klmn.html#structservio_1_1klmn_1_1state__range',1,'servio::klmn']]],
  ['state_5ftransition_5fmodel_878',['state_transition_model',['../namespaceservio_1_1klmn.html#afea6216b903aa2cb07122c0a086643cd',1,'servio::klmn']]],
  ['static_5fdetector_879',['static_detector',['../structservio_1_1mtr_1_1static__detector.html',1,'servio::mtr::static_detector'],['../structservio_1_1mtr_1_1static__detector.html#a94c0f9e7e88fec7ad559c4860f95566a',1,'servio::mtr::static_detector::static_detector()']]],
  ['static_5fdetector_2ehpp_880',['static_detector.hpp',['../static__detector_8hpp.html',1,'']]],
  ['static_5ffriction_5fdecay_881',['STATIC_FRICTION_DECAY',['../namespaceservio_1_1cfg.html#a17a7e0a2edf8384906b0f662d462cfd3a6c89e4ec3a7be28f0c103c13057c4f9c',1,'servio::cfg']]],
  ['static_5ffriction_5fdecay_882',['static_friction_decay',['../namespaceservio_1_1ctl.html#a82bc794a9ee0b6dc71d35f7a9a34f0d5',1,'servio::ctl::config']]],
  ['static_5ffriction_5fforce_883',['static_friction_force',['../structservio_1_1sim_1_1simple__motor.html#a22d12968f6742a706c9230e4b8d09aba',1,'servio::sim::simple_motor']]],
  ['static_5ffriction_5fscale_884',['STATIC_FRICTION_SCALE',['../namespaceservio_1_1cfg.html#a17a7e0a2edf8384906b0f662d462cfd3aef9de0f2161b9a8478c2fac44c8f5185',1,'servio::cfg']]],
  ['static_5ffriction_5fscale_885',['static_friction_scale',['../namespaceservio_1_1ctl.html#a12d2d3c5170110791423a4c445b6612f',1,'servio::ctl::config']]],
  ['static_5ffriction_5fvel_886',['static_friction_vel',['../structservio_1_1sim_1_1simple__motor.html#acc2abb9ad8bc69397608de83372fd0c6',1,'servio::sim::simple_motor']]],
  ['step_887',['step',['../structservio_1_1mtr_1_1static__detector.html#aba0d43a6912a9e7257dc99be65401883',1,'servio::mtr::static_detector::step()'],['../structservio_1_1mon_1_1blinker.html#aafb4c78f56d665b361b2335eb29fff34',1,'servio::mon::blinker::step()']]],
  ['stm32g4xx_5fhal_5fconf_2eh_888',['stm32g4xx_hal_conf.h',['../stm32g4xx__hal__conf_8h.html',1,'']]],
  ['stm32h5xx_5fhal_5fconf_2eh_889',['stm32h5xx_hal_conf.h',['../stm32h5xx__hal__conf_8h.html',1,'']]],
  ['stop_890',['stop',['../classservio_1_1drv_1_1period__iface.html#a06f191d35b3f6224eff019a050e3d09e',1,'servio::drv::period_iface::stop()'],['../classservio_1_1drv_1_1hbridge.html#ac6ff7accf723c388d176c3295598233c',1,'servio::drv::hbridge::stop()']]],
  ['stop_5fcallback_891',['STOP_CALLBACK',['../namespaceservio_1_1core.html#a50e4044e788144d8dde6f5c10ce3326a',1,'servio::core']]],
  ['stop_5fcounter_892',['stop_counter',['../structservio_1_1sntr_1_1tests_1_1sentry__fixture.html#a5f0c2ddb22faec42344d000fdf779cdc',1,'servio::sntr::tests::sentry_fixture']]],
  ['stop_5fexec_893',['stop_exec',['../namespaceservio_1_1fw.html#a16b95de16e9d3e2d29ea57b34bbf80da',1,'servio::fw']]],
  ['storage_2ecpp_894',['storage.cpp',['../storage_8cpp.html',1,'']]],
  ['storage_2ehpp_895',['storage.hpp',['../storage_8hpp.html',1,'']]],
  ['store_896',['store',['../namespaceservio_1_1cfg.html#aadb91e63622df0e73a864a65468876f9',1,'servio::cfg']]],
  ['store_5fas_5ffreq_897',['store_as_freq',['../structservio_1_1ftest_1_1bench_1_1loop__frequency.html#a98fcfb79262c311c40e16f747a20feae',1,'servio::ftest::bench::loop_frequency']]],
  ['store_5fdata_898',['store_data',['../namespaceservio_1_1ftest.html#a04f077611bfdcd9d113fd0df35dbba94',1,'servio::ftest']]],
  ['store_5fmetric_899',['store_metric',['../namespaceservio_1_1ftest.html#a7e35f03d806fc1aab4b09853ff8bc5f9',1,'servio::ftest']]],
  ['store_5fpersistent_5fconfig_900',['store_persistent_config',['../namespaceservio_1_1fw.html#ab36e52030344b4d8ae9775e4499c7f7e',1,'servio::fw']]],
  ['store_5fpersistent_5fconfig_2ecpp_901',['store_persistent_config.cpp',['../store__persistent__config_8cpp.html',1,'']]],
  ['store_5fpersistent_5fconfig_2ehpp_902',['store_persistent_config.hpp',['../store__persistent__config_8hpp.html',1,'']]],
  ['stuck_903',['STUCK',['../namespaceservio_1_1mon.html#af16397f3997f66e0f28c3409143cfc52a95578e7a8d44d9a1445fe38369bd36a6',1,'servio::mon']]],
  ['success_904',['success',['../structservio_1_1drv_1_1com__res.html#a1e3b91f63e1a9ee9dfb4a5cba9fdc561',1,'servio::drv::com_res']]],
  ['suite_5fdate_905',['suite_date',['../structservio_1_1ftester_1_1test__system.html#adf448c1b3ece90270c50e7816053ef96',1,'servio::ftester::test_system']]],
  ['suite_5fname_906',['suite_name',['../structservio_1_1ftester_1_1test__system.html#a7fdcb507fc501e818e1c97af21012e6d',1,'servio::ftester::test_system']]],
  ['sum_907',['sum',['../namespaceservio_1_1ftest_1_1bench.html#a602be9f91456c08126a7676980dcd957',1,'servio::ftest::bench::prof_record']]],
  ['svc_5fhandler_908',['SVC_Handler',['../it_8cpp.html#a3e5ddb3df0d62f2dc357e64a3f04a6ce',1,'it.cpp']]],
  ['switch_5fto_5fcurrent_5fcontrol_909',['switch_to_current_control',['../classservio_1_1ctl_1_1control.html#ac9bf79e53536c7bfcb6db94ef5c20c7a',1,'servio::ctl::control']]],
  ['switch_5fto_5fposition_5fcontrol_910',['switch_to_position_control',['../classservio_1_1ctl_1_1control.html#a0f932035f509245b0fcbd2882b403666',1,'servio::ctl::control']]],
  ['switch_5fto_5fpower_5fcontrol_911',['switch_to_power_control',['../classservio_1_1ctl_1_1control.html#ad3d4a1277080a68ec791550a4e0ae738',1,'servio::ctl::control']]],
  ['switch_5fto_5fvelocity_5fcontrol_912',['switch_to_velocity_control',['../classservio_1_1ctl_1_1control.html#a593068263871cb753d9d9dc59693998b',1,'servio::ctl::control']]],
  ['sys_913',['sys',['../structservio_1_1ftester_1_1joque__test.html#aa786e779669720901c94ff58fc6c4d1f',1,'servio::ftester::joque_test']]],
  ['system_2ehpp_914',['system.hpp',['../system_8hpp.html',1,'']]],
  ['systick_5fhandler_915',['SysTick_Handler',['../it_8cpp.html#aafb8d3e0fd06464b1ee0ae1edbc3c7d6',1,'it.cpp']]],
  ['tests_916',['tests',['../namespaceservio_1_1cnv_1_1tests.html',1,'servio::cnv::tests'],['../namespaceservio_1_1ctl_1_1tests.html',1,'servio::ctl::tests'],['../namespaceservio_1_1drv_1_1tests.html',1,'servio::drv::tests'],['../namespaceservio_1_1klmn_1_1tests.html',1,'servio::klmn::tests'],['../namespaceservio_1_1mtr_1_1tests.html',1,'servio::mtr::tests'],['../namespaceservio_1_1sntr_1_1tests.html',1,'servio::sntr::tests'],['../namespaceservio_1_1tests.html',1,'servio::tests']]]
];
