var searchData=
[
  ['brd_533',['brd',['../namespaceservio_1_1brd.html',1,'servio']]],
  ['cfg_534',['cfg',['../namespaceservio_1_1cfg.html',1,'servio']]],
  ['cnv_535',['cnv',['../namespaceservio_1_1cnv.html',1,'servio']]],
  ['ctl_536',['ctl',['../namespaceservio_1_1ctl.html',1,'servio']]],
  ['drv_537',['drv',['../namespaceservio_1_1fw_1_1drv.html',1,'servio::fw']]],
  ['fw_538',['fw',['../namespaceservio_1_1fw.html',1,'servio']]],
  ['klmn_539',['klmn',['../namespaceservio_1_1klmn.html',1,'servio']]],
  ['literals_540',['literals',['../namespaceservio_1_1literals.html',1,'servio']]],
  ['mtr_541',['mtr',['../namespaceservio_1_1mtr.html',1,'servio']]],
  ['plt_542',['plt',['../namespaceservio_1_1plt.html',1,'servio']]],
  ['samples_5foverflow_5ferror_543',['samples_overflow_error',['../structservio_1_1fw_1_1drv_1_1detailed__adc__channel.html#a4d35d66d691643152b5a1028f2ef31f4',1,'servio::fw::drv::detailed_adc_channel']]],
  ['scale_544',['scale',['../namespaceservio_1_1brd.html#a676ee5c5fb5244cb243880c358a84b1f',1,'servio::brd::off_scale::scale()'],['../namespaceservio_1_1cfg.html#a1e64cea163bc7cfbed23383830b2268e',1,'servio::cfg::off_scale::scale()']]],
  ['scaled_545',['scaled',['../classservio_1_1scaled.html',1,'servio']]],
  ['scaled_2ehpp_546',['scaled.hpp',['../scaled_8hpp.html',1,'']]],
  ['scmdio_547',['scmdio',['../namespaceservio_1_1scmdio.html',1,'servio']]],
  ['sec_5ftime_548',['sec_time',['../namespaceservio.html#a31c65bbbc228b1eeafc15f79227a2909',1,'servio']]],
  ['seconds_549',['seconds',['../namespaceservio.html#aedcc3813c34407bdfc1a7f6d37fc3c3b',1,'servio']]],
  ['send_550',['send',['../classservio_1_1com__interface.html#a7484d843123b3c59cc8123b272265a37',1,'servio::com_interface::send()'],['../classservio_1_1fw_1_1drv_1_1cobs__uart.html#a5e25952e60a42a7b71186197ff0157da',1,'servio::fw::drv::cobs_uart::send()']]],
  ['serial_2ecpp_551',['serial.cpp',['../serial_8cpp.html',1,'']]],
  ['serial_2ehpp_552',['serial.hpp',['../serial_8hpp.html',1,'']]],
  ['serialize_5ferror_553',['serialize_error',['../structservio_1_1scmdio_1_1serialize__error.html#a639afe6c00326057bccb4773d5b1e12e',1,'servio::scmdio::serialize_error::serialize_error()'],['../structservio_1_1scmdio_1_1serialize__error.html',1,'servio::scmdio::serialize_error']]],
  ['servio_554',['Servio',['../index.html',1,'']]],
  ['servio_555',['servio',['../namespaceservio.html',1,'']]],
  ['servio_5fexception_556',['servio_exception',['../structservio_1_1scmdio_1_1servio__exception.html',1,'servio::scmdio']]],
  ['servio_5fpb_2ecpp_557',['servio_pb.cpp',['../servio__pb_8cpp.html',1,'']]],
  ['servio_5fpb_2ehpp_558',['servio_pb.hpp',['../servio__pb_8hpp.html',1,'']]],
  ['set_559',['set',['../structservio_1_1cfg_1_1dispatcher.html#a256182993eacb532d7cbbb311b0b1acb',1,'servio::cfg::dispatcher']]],
  ['set_5fcallbacks_560',['set_callbacks',['../structservio_1_1standard__callbacks.html#aa8656594264a9dba97f0dad5134641fd',1,'servio::standard_callbacks']]],
  ['set_5fconfig_561',['set_config',['../structservio_1_1ctl_1_1linear__transition__regulator.html#ab8c6b8492b17a9e82a5ee831438708ae',1,'servio::ctl::linear_transition_regulator']]],
  ['set_5fconfig_5ffield_562',['set_config_field',['../namespaceservio_1_1scmdio.html#a523df008d64c60dc0c8b714d88637aaa',1,'servio::scmdio']]],
  ['set_5fcurrent_5fcallback_563',['set_current_callback',['../classservio_1_1current__interface.html#a92192ca40ccfb49438ecefb850e9742d',1,'servio::current_interface']]],
  ['set_5fcurrent_5fcfg_564',['set_current_cfg',['../structservio_1_1converter.html#ab49462c7869f285f9fb1bfe00bd58cd7',1,'servio::converter']]],
  ['set_5flimits_565',['set_limits',['../classservio_1_1control.html#af844f40944ea6383ea0befe80bc66f28',1,'servio::control']]],
  ['set_5fmaximum_5ftemperature_566',['set_maximum_temperature',['../classservio_1_1monitor.html#a01dcc424146e98e6a37954bcfd6ee08d',1,'servio::monitor']]],
  ['set_5fminimum_5fvoltage_567',['set_minimum_voltage',['../classservio_1_1monitor.html#a2aae343cdd0d6eb4dd8debde72ec825b',1,'servio::monitor']]],
  ['set_5fmode_568',['set_mode',['../namespaceservio_1_1scmdio.html#aa46b302a7220d504bdf3fc5683c99784',1,'servio::scmdio']]],
  ['set_5fmode_5fcurrent_569',['set_mode_current',['../namespaceservio_1_1scmdio.html#ada2b3d06cbfe7688a58b744c88013ca1',1,'servio::scmdio']]],
  ['set_5fmode_5fdisengaged_570',['set_mode_disengaged',['../namespaceservio_1_1scmdio.html#a4e9426deae421f80fe767a13e789e6d3',1,'servio::scmdio']]],
  ['set_5fmode_5fposition_571',['set_mode_position',['../namespaceservio_1_1scmdio.html#a9da5122fa9736ee8ca5c24ffca8674a9',1,'servio::scmdio']]],
  ['set_5fmode_5fvelocity_572',['set_mode_velocity',['../namespaceservio_1_1scmdio.html#aa01b34a2e19a667f616be09279d6d92c',1,'servio::scmdio']]],
  ['set_5fmoving_5fstep_573',['set_moving_step',['../classservio_1_1metrics.html#a25a4322ed4b2812bceb9e9a3e1b633a3',1,'servio::metrics']]],
  ['set_5fperiod_5fcallback_574',['set_period_callback',['../classservio_1_1fw_1_1drv_1_1hbridge.html#a820f28078ed40e9658779367cf3a58b9',1,'servio::fw::drv::hbridge::set_period_callback()'],['../classservio_1_1period__interface.html#af460392e5bfb3ce6e3ac8a76ff3741fc',1,'servio::period_interface::set_period_callback()']]],
  ['set_5fpid_575',['set_pid',['../classservio_1_1control.html#a33af882012469dab2d121396b36cd472',1,'servio::control']]],
  ['set_5fpos_5fto_5fvel_5flim_5fscale_576',['set_pos_to_vel_lim_scale',['../classservio_1_1control.html#a2c4da1356868caa7ea8472b60e3cccc4',1,'servio::control']]],
  ['set_5fposition_5fcallback_577',['set_position_callback',['../classservio_1_1position__interface.html#a769bc97ba5495a0ce866620e260b2514',1,'servio::position_interface']]],
  ['set_5fposition_5fcfg_578',['set_position_cfg',['../structservio_1_1converter.html#a27a443d8a0ad66cb8c432c305ed306db',1,'servio::converter']]],
  ['set_5fposition_5frange_579',['set_position_range',['../classservio_1_1metrics.html#a7cd660d9d67430d6721f29b3fe134716',1,'servio::metrics::set_position_range()'],['../structservio_1_1mtr_1_1posvel__kalman.html#a55f74d8a68d2e371a4838e358e3efbc3',1,'servio::mtr::posvel_kalman::set_position_range()']]],
  ['set_5fpower_580',['set_power',['../classservio_1_1pwm__motor__interface.html#aede500919d0def4a751d79117f21cc0a',1,'servio::pwm_motor_interface::set_power()'],['../classservio_1_1fw_1_1drv_1_1hbridge.html#a76cf17f26e04521f39cb7c9b4137d8cd',1,'servio::fw::drv::hbridge::set_power()']]],
  ['set_5fstatic_5ffriction_581',['set_static_friction',['../classservio_1_1control.html#a8af8e49e529721acc5aba11e9f824617',1,'servio::control']]],
  ['set_5fstep_582',['set_step',['../structservio_1_1static__detector.html#aed2014a3c54614a2fbbd3e4a426ad5bf',1,'servio::static_detector']]],
  ['set_5ftemp_5fcfg_583',['set_temp_cfg',['../structservio_1_1converter.html#a7466566d0c437eaa0df38add998054fb',1,'servio::converter']]],
  ['set_5fvcc_5fcfg_584',['set_vcc_cfg',['../structservio_1_1converter.html#a3745cb09acadf3e0cd1e973d20020ad0',1,'servio::converter']]],
  ['set_5fvel_5fto_5fcurr_5flim_5fscale_585',['set_vel_to_curr_lim_scale',['../classservio_1_1control.html#a60342e1943341e5baad648e40c2bd7e4',1,'servio::control']]],
  ['setpoint_586',['setpoint',['../namespaceservio_1_1brd.html#structservio_1_1brd_1_1setpoint',1,'servio::brd']]],
  ['setup_587',['setup',['../structservio_1_1fw_1_1drv_1_1adc__pooler.html#aa773b6d79fa55a4f636bf865ad52aca3',1,'servio::fw::drv::adc_pooler::setup()'],['../classservio_1_1fw_1_1drv_1_1clock.html#aaa8f1ab396e9d8b915cd48f034a0e00f',1,'servio::fw::drv::clock::setup()'],['../classservio_1_1fw_1_1drv_1_1cobs__uart.html#ad3d8fa48b26efa4dcfbb477b2a63449c',1,'servio::fw::drv::cobs_uart::setup()'],['../classservio_1_1fw_1_1drv_1_1hbridge.html#a0755b178d088d14ebc678f9dfb2188c0',1,'servio::fw::drv::hbridge::setup()'],['../classservio_1_1fw_1_1drv_1_1leds.html#a57e58289e01089e22846ca3336b4ee58',1,'servio::fw::drv::leds::setup()'],['../structservio_1_1scmdio_1_1common__cli.html#a8efad675885c5e667ff8dfa954e62149',1,'servio::scmdio::common_cli::setup()']]],
  ['setup_2ehpp_588',['setup.hpp',['../boards_2prototype2_2setup_8hpp.html',1,'(Global Namespace)'],['../platforms_2stm32h5_2setup_8hpp.html',1,'(Global Namespace)']]],
  ['setup_5fadc_589',['setup_adc',['../namespaceservio_1_1brd.html#a6899a3f9d2b0715afe322fab084b0483',1,'servio::brd::setup_adc()'],['../namespaceservio_1_1plt.html#a61d6b0c2150e342de64df4363ad4e8bc',1,'servio::plt::setup_adc()']]],
  ['setup_5fadc_5fchannel_590',['setup_adc_channel',['../namespaceservio_1_1brd.html#aab908bf0416af7a1874359c5294ffbbc',1,'servio::brd::setup_adc_channel()'],['../namespaceservio_1_1plt.html#ad6b2eafaa6f1fbbaa3c70276bf8d1984',1,'servio::plt::setup_adc_channel()']]],
  ['setup_5fadc_5ftimer_591',['setup_adc_timer',['../namespaceservio_1_1brd.html#a1adccd58bc423db0db48b2b4ff6bbf6d',1,'servio::brd::setup_adc_timer()'],['../namespaceservio_1_1plt.html#ab59156a4d6fbd15217a26dc5ebed8b64',1,'servio::plt::setup_adc_timer()']]],
  ['setup_5fboard_592',['setup_board',['../namespaceservio_1_1brd.html#acf0eac3166e968f5cefe71de1f5d5ca8',1,'servio::brd']]],
  ['setup_5fclk_593',['setup_clk',['../namespaceservio_1_1brd.html#af375aef2289854552e3c6e5c3c16a5cb',1,'servio::brd::setup_clk()'],['../namespaceservio_1_1plt.html#a97b99f12fdb9bdec7f51c3a2fa1a63b8',1,'servio::plt::setup_clk()']]],
  ['setup_5fclock_5ftimer_594',['setup_clock_timer',['../namespaceservio_1_1brd.html#addcb00188aacbda8352cbd4ddbe7d3e9',1,'servio::brd::setup_clock_timer()'],['../namespaceservio_1_1plt.html#afa3ffb0666945381bc9735b671490daf',1,'servio::plt::setup_clock_timer()']]],
  ['setup_5fcore_5fdrivers_595',['setup_core_drivers',['../namespaceservio_1_1brd.html#a1027c0b50787d58e22d5de797d813067',1,'servio::brd']]],
  ['setup_5fdebug_5fcomms_596',['setup_debug_comms',['../namespaceservio_1_1brd.html#acbde941dce13e359e5aae87a5a63bb7d',1,'servio::brd']]],
  ['setup_5fgpio_597',['setup_gpio',['../namespaceservio_1_1brd.html#a32dbf7e02373de3773cab3343fff116f',1,'servio::brd::setup_gpio()'],['../namespaceservio_1_1plt.html#a1bce43d05d8019e634fc1046cac7c99a',1,'servio::plt::setup_gpio(const fw::drv::pin_cfg &amp;cfg)']]],
  ['setup_5fhbridge_5ftimers_598',['setup_hbridge_timers',['../namespaceservio_1_1plt.html#a917cc285404ba1c9a62080f12567ad7c',1,'servio::plt::setup_hbridge_timers()'],['../namespaceservio_1_1brd.html#a0fe8bce4494ca56db71b5ccfdac9a52a',1,'servio::brd::setup_hbridge_timers(TIM_HandleTypeDef &amp;tim, hb_timer_cfg cfg)']]],
  ['setup_5fleds_5fchannel_599',['setup_leds_channel',['../namespaceservio_1_1brd.html#a08d681364bb72de2b5103f4d7a8a6973',1,'servio::brd::setup_leds_channel()'],['../namespaceservio_1_1plt.html#ac196502acb654675c7db127deb9c4744',1,'servio::plt::setup_leds_channel()']]],
  ['setup_5fleds_5ftimer_600',['setup_leds_timer',['../namespaceservio_1_1brd.html#a8d47462a1f7fce38cda0f512305746ba',1,'servio::brd']]],
  ['setup_5fuart_601',['setup_uart',['../namespaceservio_1_1plt.html#a7b7c8043898e10b87fa53fd5bb021d96',1,'servio::plt::setup_uart()'],['../namespaceservio_1_1brd.html#ab330172ec900f8e5a967b042c5d0fefb',1,'servio::brd::setup_uart()']]],
  ['simulate_602',['simulate',['../namespaceservio_1_1klmn.html#af3822093522319dfa0c920ce1cf6a873',1,'servio::klmn']]],
  ['simulate_2ecpp_603',['simulate.cpp',['../simulate_8cpp.html',1,'']]],
  ['simulate_2ehpp_604',['simulate.hpp',['../simulate_8hpp.html',1,'']]],
  ['sin_5fapprox_605',['sin_approx',['../namespaceservio.html#aa42f0345929b73541ef4b32f01e483df',1,'servio']]],
  ['size_606',['size',['../namespaceservio_1_1klmn.html#a6012e20714154f03136eb5812a2abef2',1,'servio::klmn::state_range']]],
  ['st_5frange_607',['st_range',['../structservio_1_1mtr_1_1posvel__kalman.html#a16bbaa07f34c05010375ecc1b35a4a04',1,'servio::mtr::posvel_kalman']]],
  ['standard_5fcallbacks_608',['standard_callbacks',['../structservio_1_1standard__callbacks.html',1,'servio::standard_callbacks'],['../structservio_1_1standard__callbacks.html#a086416d4a7ccdbae6af037e95fdecd08',1,'servio::standard_callbacks::standard_callbacks()']]],
  ['standard_5fcallbacks_2ehpp_609',['standard_callbacks.hpp',['../standard__callbacks_8hpp.html',1,'']]],
  ['start_610',['start',['../classservio_1_1com__interface.html#adcefcf4a0144d7954ce3f0e839b5aaf5',1,'servio::com_interface::start()'],['../classservio_1_1period__interface.html#a4999bf4071715660164d515cbf3aabf2',1,'servio::period_interface::start()'],['../structservio_1_1fw_1_1drv_1_1adc__pooler.html#a1acb023b25ee309dd14780a9b260198b',1,'servio::fw::drv::adc_pooler::start()'],['../classservio_1_1fw_1_1drv_1_1cobs__uart.html#a203f888c6aa45b22fa524035a9447d67',1,'servio::fw::drv::cobs_uart::start()'],['../classservio_1_1fw_1_1drv_1_1hbridge.html#a4fda7f2ba580f7377906b9d6e1b782a3',1,'servio::fw::drv::hbridge::start()'],['../classservio_1_1fw_1_1drv_1_1leds.html#a3fa59e2e03210a07006e1d77dfbcaa3e',1,'servio::fw::drv::leds::start()']]],
  ['start_5fcallback_611',['start_callback',['../namespaceservio_1_1brd.html#abe68072e2cdc06bad4d2e623929525bb',1,'servio::brd']]],
  ['start_5fcb_612',['start_cb',['../structservio_1_1core__drivers.html#a37b663aa18a5ac994c439e7b3611c397',1,'servio::core_drivers']]],
  ['start_5ferror_613',['start_error',['../structservio_1_1fw_1_1drv_1_1detailed__adc__channel.html#adaa89a687d5b3990536d0d9495b0bf96',1,'servio::fw::drv::detailed_adc_channel::start_error()'],['../structservio_1_1fw_1_1drv_1_1adc__channel.html#a3d51d713f568070d79ba0de657989977',1,'servio::fw::drv::adc_channel::start_error()']]],
  ['state_614',['state',['../namespaceservio_1_1klmn.html#acbeaec773e12939afebddba25b5d3135',1,'servio::klmn::state()'],['../structservio_1_1ctl_1_1linear__transition__regulator.html#aecb19b527ceb961ed007cbbd7ed5aca0',1,'servio::ctl::linear_transition_regulator::state()']]],
  ['state_5fcovariance_615',['state_covariance',['../namespaceservio_1_1klmn.html#ae839380c658b06e259608b78e6f17203',1,'servio::klmn']]],
  ['state_5frange_616',['state_range',['../namespaceservio_1_1klmn.html#structservio_1_1klmn_1_1state__range',1,'servio::klmn']]],
  ['state_5ftransition_5fmodel_617',['state_transition_model',['../namespaceservio_1_1klmn.html#afea6216b903aa2cb07122c0a086643cd',1,'servio::klmn']]],
  ['static_5fdetector_618',['static_detector',['../structservio_1_1static__detector.html',1,'servio::static_detector'],['../structservio_1_1static__detector.html#a33c7fb04346d754d911f1fcc99e0ab36',1,'servio::static_detector::static_detector()']]],
  ['static_5fdetector_2ehpp_619',['static_detector.hpp',['../static__detector_8hpp.html',1,'']]],
  ['static_5ffriction_5fdecay_620',['static_friction_decay',['../namespaceservio_1_1ctl.html#a82bc794a9ee0b6dc71d35f7a9a34f0d5',1,'servio::ctl::config']]],
  ['static_5ffriction_5fdecay_621',['STATIC_FRICTION_DECAY',['../namespaceservio_1_1cfg.html#a17a7e0a2edf8384906b0f662d462cfd3a6c89e4ec3a7be28f0c103c13057c4f9c',1,'servio::cfg']]],
  ['static_5ffriction_5fscale_622',['static_friction_scale',['../namespaceservio_1_1ctl.html#a12d2d3c5170110791423a4c445b6612f',1,'servio::ctl::config']]],
  ['static_5ffriction_5fscale_623',['STATIC_FRICTION_SCALE',['../namespaceservio_1_1cfg.html#a17a7e0a2edf8384906b0f662d462cfd3aef9de0f2161b9a8478c2fac44c8f5185',1,'servio::cfg']]],
  ['status_624',['status',['../namespaceservio.html#aa94b985e36e141fd17f3a16cd953d788',1,'servio']]],
  ['status_2ehpp_625',['status.hpp',['../status_8hpp.html',1,'']]],
  ['step_626',['step',['../structservio_1_1static__detector.html#ab37a5f1baeca5f79c6b2c8b39ebbb894',1,'servio::static_detector']]],
  ['stm32g4xx_5fhal_5fconf_2eh_627',['stm32g4xx_hal_conf.h',['../stm32g4xx__hal__conf_8h.html',1,'']]],
  ['stm32h5xx_5fhal_5fconf_2eh_628',['stm32h5xx_hal_conf.h',['../stm32h5xx__hal__conf_8h.html',1,'']]],
  ['stop_629',['stop',['../classservio_1_1fw_1_1drv_1_1hbridge.html#acf0d11cb10dcacedd424c5bf341bcc8d',1,'servio::fw::drv::hbridge::stop()'],['../classservio_1_1period__interface.html#ad2d5922b8fa40fa77482dd5f6968f7e6',1,'servio::period_interface::stop()']]],
  ['stop_5fcallback_630',['STOP_CALLBACK',['../namespaceservio.html#a7da57f781cc59504821aec91b1b80995',1,'servio']]],
  ['stop_5ferror_631',['stop_error',['../structservio_1_1fw_1_1drv_1_1adc__channel.html#ace8f4ff2fdbd3199abc9c166e38d6d3e',1,'servio::fw::drv::adc_channel::stop_error()'],['../structservio_1_1fw_1_1drv_1_1detailed__adc__channel.html#ad79552c42ac44ec994a7259812070789',1,'servio::fw::drv::detailed_adc_channel::stop_error()']]],
  ['stop_5fexec_632',['stop_exec',['../namespaceservio_1_1fw.html#a16b95de16e9d3e2d29ea57b34bbf80da',1,'servio::fw']]],
  ['storage_2ecpp_633',['storage.cpp',['../storage_8cpp.html',1,'']]],
  ['storage_2ehpp_634',['storage.hpp',['../storage_8hpp.html',1,'']]],
  ['store_635',['store',['../namespaceservio_1_1cfg.html#aa67b98724f717923471dc18c6e07db83',1,'servio::cfg']]],
  ['store_5fpersistent_5fconfig_636',['store_persistent_config',['../namespaceservio_1_1fw.html#ab36e52030344b4d8ae9775e4499c7f7e',1,'servio::fw']]],
  ['store_5fpersistent_5fconfig_2ecpp_637',['store_persistent_config.cpp',['../store__persistent__config_8cpp.html',1,'']]],
  ['store_5fpersistent_5fconfig_2ehpp_638',['store_persistent_config.hpp',['../store__persistent__config_8hpp.html',1,'']]],
  ['stuck_639',['STUCK',['../namespaceservio.html#ad61ae4f4c2910cb80812607860c80fb3a95578e7a8d44d9a1445fe38369bd36a6',1,'servio']]],
  ['success_640',['success',['../namespaceservio.html#ad5cfb648ae3b894cfd3950e9ba00f259',1,'servio::com_res']]],
  ['svc_5fhandler_641',['SVC_Handler',['../it_8cpp.html#a3e5ddb3df0d62f2dc357e64a3f04a6ce',1,'it.cpp']]],
  ['switch_5fto_5fcurrent_5fcontrol_642',['switch_to_current_control',['../classservio_1_1control.html#ae22d4cf6ec9dfa0b97210ca820da0bcf',1,'servio::control']]],
  ['switch_5fto_5fposition_5fcontrol_643',['switch_to_position_control',['../classservio_1_1control.html#a69af3008f0dd7dc5e2b6ecf56038d2e2',1,'servio::control']]],
  ['switch_5fto_5fpower_5fcontrol_644',['switch_to_power_control',['../classservio_1_1control.html#ac81391b761a90cc8f1bbcac5f0840355',1,'servio::control']]],
  ['switch_5fto_5fvelocity_5fcontrol_645',['switch_to_velocity_control',['../classservio_1_1control.html#acdc451d9d4c048144183fdb71ef73193',1,'servio::control']]],
  ['systick_5fhandler_646',['SysTick_Handler',['../it_8cpp.html#aafb8d3e0fd06464b1ee0ae1edbc3c7d6',1,'it.cpp']]],
  ['tests_647',['tests',['../namespaceservio_1_1tests.html',1,'servio']]]
];
